did some grammer fixing in content

--- a/website/homepage-3.html
+++ b/website/homepage-3.html
@@ -143,7 +143,7 @@
 				<!-- Feature Content -->
 				<div class="feature-content">
 					<h2>ScribeGenie casts a spell of brilliance!</h2>
-					<p>Believe it or not, scribeGenie brings ChatGPT's Sorcery to every text box in your browser.</p>
+					<p>Believe it or not, ScribeGenie brings ChatGPT's Sorcery to every text box in your browser.</p>
 				</div>
 			</div>
 		</div>
