some text formatting

--- a/website/homepage-3.html
+++ b/website/homepage-3.html
@@ -28,7 +28,7 @@
   <div class="container">
     <a class="navbar-brand" href="index.html">ScribeGenie</a>
     <div class="nav-item">
-		<a class="nav-link" href="#">Get Early Access</a>
+		<a class="nav-link" href="#early-access-form">Get Early Access</a>
 	</div>
   </div>
 </nav>
@@ -42,12 +42,12 @@
 			<div class="col-lg-8 m-auto">
 				<!-- Banner Contents -->
 				<div class="block text-center">
-					<h1>Supercharge Your Writing</h1>
+					<h1>✍️Supercharge Your Writing✍️</h1>
 					<p>Unleash Web AI for Effortless Email, Post, Tweet, Article, and Text Compositions!  <br>
 						
 					</p>
 					<div class="btn">
-						<a class="early-access-link" href="#"><b>Get Early Access</b></a>
+						<a class="early-access-link" href="#early-access-form"><b>Get Early Access</b></a>
 					</div>
 					<!-- Promo Video -->
 					<div class="video">
