--- a/website/homepage-3.html
+++ b/website/homepage-3.html
@@ -9,7 +9,7 @@
   <meta name="author" content="ScribeGenie">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/web_logo.png" />
   
   <!-- PLUGINS CSS STYLE -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
@@ -51,7 +51,7 @@
 					</div>
 					<!-- Promo Video -->
 					<div class="video">
-						<img class="img-fluid shadow" src="images/thumbs/promo-video-thumbnail.jpg" alt="video-thumbnail">
+						<img class="img-fluid shadow" src="images/logo_photo.jpg" alt="video-thumbnail">
 						<div class="video-button video-box">
 							<!-- Video Play Button -->
 							<a href="javascript:void(0)">
